2001-08-27  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-auth.c (soup_auth_new_digest): Set the
	compare func on the returned object.

2001-08-27  Joe Shaw  <joe@ximian.com>

	* src/soup-core/soup-context.c (soup_try_existing_connections):
	Just return NULL from this function for now. There are some bugs
	in it. Added a big, triple FIXME.

2001-08-26  Alex Graveley  <alex@ximian.com>

	* src/soup-wsdl/*: Format fixes.
	* src/soup-wsdl-runtime/*: Format fixes.

2001-08-26  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-misc.c (soup_config_ssl_ca_file): impl.
	(soup_config_ssl_ca_directory): impl.
	(soup_config_ssl_certificate): impl.
	Add config file support for client certificates.

2001-08-26  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-misc.c (soup_set_ssl_ca_file): impl.
	(soup_set_ssl_ca_dir): impl.
	(soup_set_ssl_cert_files): impl.

	* src/soup-core/soup-openssl.c (soup_openssl_init): Load cert
	authority files found in HTTPS_CA_DIR and HTTPS_CA_FILE.
	(soup_openssl_get_iochannel): Load certificate found in
	HTTPS_CERT_FILE and private key from file in
	HTTPS_KEY_FILE. Client certificates thanks to Scott Hutton
	(shutton@pobox.com).

2001-08-24  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-queue.c (soup_queue_connect_cb): Always
	regenerate req->priv->req_header.

	* src/soup-core/soup-ntlm.c (soup_ntlm_lanmanager_hash): pass 15
	byte buffer to work around array bounds read by setup_schedule.

	* src/soup-core/soup-message.c (authorize_handler): No need to
	free msg->priv->req_header as it is generated on each request now.
	(soup_message_set_request_header): Ditto.

	* src/soup-core/soup-auth.c (ntlm_auth): Only return
	auth->response one time. Subsequent calls return NULL.

	* src/soup-core/soup-queue.c (soup_encode_http_auth): Check for
	NULL auth response.

2001-08-23  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-auth.c (ntlm_new): Fix under-allocation.