@@ -1,3 +1,12 @@
+2001-08-28  Alex Graveley  <alex@ximian.com>
+
+	* src/soup-core/soup-transfer.c (soup_transfer_read_chunk):
+	Rewrite HEX decoding to hopefully be easier to understand and maintain.
+
+	* src/soup-core/soup-message.c (redirect_handler): Don't unref the
+	old context until after we requeue the message using the new
+	context, as we may still have a connection from the old one.
+
 2001-08-27  Alex Graveley  <alex@ximian.com>
 
 	* src/soup-core/soup-auth.c (soup_auth_new_digest): Set the
